--- a/themes/hexo-theme-Claudia/_config.yml
+++ b/themes/hexo-theme-Claudia/_config.yml
@@ -40,4 +40,4 @@ comment_utteranc:
 appearance: auto # Default value is auto
 
 # Miscellaneous
-favicon: /images/favicon.ico
+favicon: /images/favicon.png
