--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
+    "dev": "hexo server --draft",
+    "new": "hexo new",
+    "draft": "hexo new draft",
     "commit": "git-cz"
   },
   "hexo": {
